--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
     "@hapi/joi": "^15.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.6",
     "joi-image-extension": "^1.0.0",
