--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
     "start": "node server.js"
@@ -20,26 +19,29 @@
   },
   "homepage": "https://github.com/Emmyn5600/BroadCaster013#readme",
   "dependencies": {
-    "@hapi/hapi": "^18.4.0",
-    "@hapi/joi": "^15.0.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.1.6-alpha.6",
-    "joi-image-extension": "^1.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "module_name": "^1.0.0",
-    "moment": "^2.24.0",
-    "multer": "^1.4.2",
-    "node-video-lib": "^2.1.10",
-    "uuid": "^3.3.3"
-  },
-  "devDependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "@hapi/hapi": "^18.4.0",
+    "@hapi/joi": "^15.0.3",
     "babel-preset-env": "^1.7.0",
-    "babel-watch": "^7.0.0"
+    "babel-watch": "^7.0.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^2.7.4",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.6-alpha.6"
+  },
+  "devDependencies": {
+    "joi-image-extension": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "merge-images": "^1.1.0",
+    "module_name": "^1.0.0",
+    "moment": "^2.24.0",
+    "multer": "^1.4.2",
+    "node-video-lib": "^2.1.10",
+    "package-name": "^0.1.0",
+    "uuid": "^3.3.3"
   },
   "keywords": []
 }
