--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
     "mocha": "^6.2.2",
     "morgan": "^1.9.1",
     "nyc": "^14.1.1",
-    "travis-ci": "^2.2.0"
+    "travis-ci": "^2.2.0",
+    "@babel/register": "^7.7.4"
   },
   "devDependencies": {
-    "@babel/register": "^7.7.4",
+    
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
     "eslint": "^6.7.0",
