--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev-start": "babel-watch server/server.js",
-    "start": "node --require @babel/register ./server/server.js ",
+    "start": "node --require @babel/register ./Server/server.js ",
     "test": "nyc mocha --require  @babel/register Server/test/*.js --timeout  100000 --exit",
     "coverage": "nyc npm run test && nyc report --reporter=text-lcov | coveralls",
     "showCoverage": "start coverage/server/index.html"
